--- a/style.css
+++ b/style.css
@@ -116,11 +116,6 @@
 
 /*END OF LIST ITEMS*/
 @media (min-width: 768px) {
-  main {
-    display: flex;
-    justify-content: space-around;
-  }
-
   .container {
     display: flex;
     margin: 4rem;
